# plotly_gif

./: LICENSE.txt  README.md  requirements.txt  setup.cfg
examples/: example_1.py  example_1_option2.py  example_1_short.py  example_2.py  example_3.py  example_reload.py
src/: three_d_plots.py
src/plotly_gif/: __init__.py  _format.py  format_.py  gif.py  three_d_plots.py  two_d_plots.py
