[metadata]
name = plotly_gif
version = 0.0.1
description = Create gif from your plotly figures!
long_description = file: README.md
long_description_content_type = text/markdown
author = Dylan Walsh
url = https://github.com/dylanwal/plotly_gif
license = BSD
license_file = LICENSE.txt
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    plotly_gif
python_requires = >=3.8
package_dir =
    =src
zip_safe = no
include_package_data = true


